--- a/tests/usbbandwidth/README
+++ b/tests/usbbandwidth/README
@@ -1,2 +1,11 @@
-This script measures the bandwidth available at the USB connection on the raspberry pi. The teensy boards should be set to continually get as much data as possible.
-In tests, I have seen 262 kB/s for each teensy even when multiple ones are connected via a hub - not sure what to make of it as surely the total usb bandwidth should be limited?
+This script measures the bandwidth available at the USB connection, from your computer or a raspberry Pi, say. The teensy boards should be set to continually get as much data as possible.
+To run:
+  Download sketch/UsbBandwidth.ino into your teensy(s). Or just read as much data as possible from the serial port!
+Then in this folder run::
+  cmake .
+  make
+
+To compile, and then run it with::
+  ./usbbandwidth /dev/ttyACM0
+
+From the raspberry pi I have seen 262 kB/s for each teensy even when multiple ones are connected via a hub - not sure what to make of it as surely the total usb bandwidth should be limited?
